--- a/overview.Rmd
+++ b/overview.Rmd
@@ -1,12 +1,23 @@
 ---
-title: "Overview"
+title: "The Kronos Incident- Follow the Data"
 description: |
-  A new article created using the Distill format.
+  Overview of the facts and objectives of this challenge.
 output: distill::distill_article
 ---
+<style>
+
+body{
+  background-color: #EBEDEF;
+  font-family:helvetica;
+}
+</style>
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE)
+knitr::opts_chunk$set(fig.retina = 3,
+                      echo = FALSE,
+                      eval = TRUE,
+                      message = FALSE,
+                      warning = FALSE)
 ```
 
 ## Objective
